# Mcaster1DSPEncoder

./: .gitignore  AUTHORS  CHANGELOG.md  CLAUDE-RESUME.md  CLAUDE.md  CREDITS.md  FORKS.md  HOWTO.html  HOWTO.md  INSTRUCTIONS.md  LICENSE  MCASTER1DSPENCODER.md  Makefile.am  Mcaster1DSPEncoder_Master.sln  PLANNING-MACOS.html  PLANNING.md  QT6-HOWTO.html  README-LINUX.md  README.md  REFACTOR-REPORT.html  REFACTOR-REPORT.md  ROADMAP.md  autogen.sh  build-all-rebrand.ps1  build-all.ps1  build-foobar-log.ps1  build-foobar-verbose.ps1  build-main.ps1  build-plugins.ps1  build-portaudio.ps1  build-rebrand.ps1  check-abs-paths.ps1  check-deps.ps1  check-outputs.ps1  clean-all-foobar.ps1  configure.ac  copy-dlls.ps1  deploy-foobar.ps1  deploy-radioboss.ps1  deploy-radiodj.ps1  (+43 more)
docs/: index.html
src/: About.cpp  AdvancedSettings.cpp  AdvancedSettings.h  BasicSettings.cpp  BasicSettings.h  Config.cpp  Config.h  DocViewer.cpp  DocViewer.h  Dummy.cpp  EditMetadata.cpp  EditMetadata.h  FindWindow.cpp  FindWindow.h  FlexMeters.cpp  ICY22Settings.cpp  ICY22Settings.h  MainWindow.cpp  MainWindow.h  Mcaster1DSPEncoder.cpp  Mcaster1DSPEncoder.h  Mcaster1DSPEncoder.vcxproj  Mcaster1DSPEncoder.vcxproj.filters  StdAfx.h  YPSettings.cpp  YPSettings.h  config_yaml.cpp  config_yaml.h  mcaster1_foobar.cpp  mcaster1_foobar.nsi  mcaster1_foobar.vcxproj  mcaster1_radiodj.cpp  mcaster1_radiodj.vcxproj  mcaster1_radiodj.vcxproj.filters  mcaster1_winamp.cpp  mcaster1_winamp.nsi  mcaster1_winamp.vcxproj  mcaster1_winamp.vcxproj.filters  mcaster1dspencoder.rc  mcaster1dspencoder_standalone.nsi  (+5 more)
src/libmcaster1dspencoder/: Socket.cpp  libaltacast.vcxproj.filters  libmcaster1dspencoder.cpp  libmcaster1dspencoder.h  libmcaster1dspencoder.vcxproj  libmcaster1dspencoder_resample.h  resample.c
src/linux/: CLAUDE.md  Makefile  Makefile.am  archive_writer.cpp  archive_writer.h  audio_pipeline.cpp  audio_pipeline.h  audio_source.cpp  audio_source.h  config_loader.cpp  config_loader.h  config_stub.cpp  encoder_slot.cpp  encoder_slot.h  fastcgi_client.cpp  fastcgi_client.h  file_source.cpp  file_source.h  http_api.cpp  http_api.h  main_cli.cpp  make_http_test.sh  make_phase3.sh  make_phase4.sh  mc1_db.cpp  mc1_db.h  mc1_logger.h  playlist_parser.cpp  server_monitors.cpp  server_monitors.h  stream_client.cpp  stream_client.h  system_health.cpp  system_health.h
src/linux/dsp/: agc.cpp  agc.h  crossfader.cpp  dsp_chain.cpp  dsp_chain.h  eq.cpp  eq.h
src/linux/web_ui/: CLAUDE.md  app.js  dashboard.php  edit_encoders.php  encoders.php  index.html  login.html  media.php  mediaplayer.php  mediaplayerpro.php  metrics.php  playlists.php  profile.php  settings.php  style.css
src/linux/web_ui/app/: media.php  metrics.php
src/linux/web_ui/app/api/: artwork.php  audio.php  auth.php  encoders.php  health.php  metrics.php  player.php  playlists.php  profile.php  servers.php  serverstats.php  tracks.php  upload.php
src/linux/web_ui/app/inc/: auth.php  db.php  edit.encoders.class.php  footer.php  header.php  icons.php  logger.php  mc1_config.php  media.lib.player.php  metrics.datacalculate.class.php  metrics.datacollector.class.php  metrics.serverstats.class.php  playlist.builder.algorithm.class.php  playlist.manager.pro.class.php  profile.usr.class.php  traits.db.class.php  user_auth.php
src/macos/: Info.plist  Makefile.am  Mcaster1DSPEncoder.entitlements  about_dialog.cpp  about_dialog.h  advanced_settings_tab.cpp  advanced_settings_tab.h  app.cpp  audio_capture_macos.h  audio_capture_macos.mm  audio_pipeline.h  audio_source.cpp  codec_validator.h  config_dialog.cpp  config_dialog.h  config_loader.h  dbx_voice_dialog.h  dnas_slot_poller.cpp  dnas_stats.cpp  dnas_stats.h  dsp_effect_agc.yaml  dsp_effect_dbx_voice.yaml  dsp_effect_eq10.yaml  dsp_effect_eq31.yaml  dsp_effect_ptt_duck.yaml  dsp_effect_sonic_enhancer.yaml  dsp_effects_rack.cpp  dsp_presets.cpp  dsp_presets.h  dsp_rack_state.yaml  edit_metadata_dialog.cpp  edit_metadata_dialog.h  effects_rack_tab.cpp  encoder_list_model.cpp  encoder_list_model.h  encoder_presets.cpp  encoder_presets.h  encoder_slot.h  encoder_type_chooser.cpp  encoder_type_chooser.h  (+66 more)
src/macos/dsp/: agc.cpp  dsp_chain.h  eq31.cpp  eq31.h  ptt_duck.h  sonic_enhancer.cpp  sonic_enhancer.h
src/macos/podcast/: http_client.h  podcast_publisher.h  sftp_uploader.cpp
src/macos/resources/: Mcaster1DSPEncoder.icns
src/macos/scripts/: make-dmg.sh  make-icns.sh
src/macos/video/: amf0.cpp  amf0.h  broadcast_monitor_window.cpp  broadcast_monitor_window.h  camera_preview_window.h  flv_muxer.cpp  hls_segmenter.cpp  live_video_studio.cpp  overlay_renderer.cpp  rtmp_client.cpp  rtmp_client.h  screen_capture_source.h  screen_capture_source.mm  stream_target_editor.cpp  stream_target_editor.h  transition_engine.cpp  transition_engine.h  video_capture_macos.h  video_capture_macos.mm  video_effects.cpp  video_encoder.mm  video_file_source.h  video_file_source.mm  video_source.h  video_stream_pipeline.h  vpx_encoder.cpp
win-qt/: Mcaster1DSPEncoder_Qt.vcxproj  about_dialog.cpp  agc_settings_dialog.cpp  agc_settings_dialog.h  app.cpp  app.h  archive_writer.cpp  archive_writer.h  audio_capture_windows.cpp  audio_capture_windows.h  audio_pipeline.cpp  audio_pipeline.h  audio_source.h  basic_settings_tab.cpp  basic_settings_tab.h  codec_validator.cpp  config_loader.cpp  config_types.h  dbx_voice_dialog.cpp  dnas_slot_poller.h  dnas_stats.cpp  dnas_stats.h  dsp_effects_rack.h  effects_rack_tab.h  encoder_slot.cpp  eq_curve_widget.cpp  eq_graphic_dialog.h  input_level_monitor.h  main.cpp  main_window.cpp  overlay_settings_dialog.h  platform_windows.cpp  platform_windows.h  playlist_parser.h  podcast_settings_tab.h  preferences_dialog.cpp  preset_browser_dialog.cpp  preset_browser_dialog.h  prompt.md  stream_client.cpp  (+2 more)
win-qt/dsp/: agc.h  crossfader.h  dbx_voice.cpp  dbx_voice.h  dsp_chain.cpp  ptt_duck.cpp
win-qt/podcast/: http_client.cpp  podcast_publisher.cpp  rss_generator.cpp  rss_generator.h  sftp_uploader.cpp  sftp_uploader.h
win-qt/resources/: mcaster1.qrc
win-qt/video/: camera_preview_widget.cpp  (+25 more)
(+2 files in other folders)
